--- a/style.css
+++ b/style.css
@@ -38,14 +38,14 @@
 
 body {
   width: 200px;
-  height: 90px;
+  /*height: 118px;*/
   margin: 5px;
 }
 
 .container {
   border: solid #F5F5F5 2px;
   border-radius: 5px;
-  height: 100%;
+  min-height: 80px;
 }
 
 .wrapper {
